package patientRecord.patientRecordComposite.recordContent.bloodPressure;


import patientRecord.patientRecordComposite.RecordEntry;

/**Concrete of Blood pressure record.
 */
public class BloodPressureRecordList extends RecordEntry {
    public BloodPressureRecordList() {
        super("BloodPressureRecord");
    }
}
